--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ scipy==1.7.3
 six==1.16.0
 SoundFile==0.10.3.post1
 sqlparse==0.4.2
+gunicorn==20.1.0
 threadpoolctl==3.1.0
 typing_extensions==4.0.1
 urllib3==1.26.8
